Resized profile pictures + Changed team members - Resized profile pictures to be smaller and more compact to be more accessible. Added whitespace around sections for better readability. - Changed a couple of team members as per the client's requests. - Fixed inconsistent language use.

--- a/my-vue-app/src/pages/stylesheets/Team.css
+++ b/my-vue-app/src/pages/stylesheets/Team.css
@@ -22,7 +22,7 @@
 }
 .grade-list-item:hover{
     transition: all 0.3s ease;
-    background-color: rgb(45, 155, 185)
+    background-color: #33d4f4;
 }
 .grade-list-item a:hover{
     color: white;
